--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,20 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.venv/
+venv/
 
-# testing
-/coverage
+# Uploads
+/static/uploads/
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
+# Environment
+.env
+.env.local
 
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-.env
-
-# uploads
-/public/uploads
 
 # ide
 .idea
