--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,12 @@
       "use": "@vercel/python"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "app.py"
+      "source": "/(.*)",
+      "destination": "app.py"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
